# boatrace_estimator

./: const.py  estim.py  pyproject.toml
