[tool.poetry]
name = "btr-est"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
llvmlite = "^0.43.0"
numba = "^0.60.0"
shap = "^0.46.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
